--- a/data_clean/eda_and_data_clean.ipynb
+++ b/data_clean/eda_and_data_clean.ipynb
@@ -385,7 +385,8 @@
    "source": [
     "#heatmap of the corrolation of evething\n",
     "plt.figure(figsize=(12,8))\n",
-    "sns.heatmap(df.corr(),annot=True,cmap='viridis')"
+    "sns.heatmap(df.corr(),annot=True,cmap='viridis')\n",
+    "plt.savefig('heat_plot.png')"
    ]
   },
   {
@@ -463,7 +464,8 @@
    "source": [
     "#scatterplot between area and prices\n",
     "plt.figure(figsize=(12,8))\n",
-    "sns.scatterplot(x='prices',y='areas',data=df,)"
+    "sns.scatterplot(x='prices',y='areas',data=df,)\n",
+    "plt.savefig('sactter_plot.png')"
    ]
   },
   {
@@ -1280,7 +1282,8 @@
    ],
    "source": [
     "# The new graph make more sense\n",
-    "df[['prices','prov']].groupby('prov').mean().drop(l_prov).sort_values('prices').plot(kind='bar',figsize=(16,8))"
+    "df[['prices','prov']].groupby('prov').mean().drop(l_prov).sort_values('prices').plot(kind='bar',figsize=(16,8))\n",
+    "plt.savefig('bar_plot.png')"
    ]
   },
   {
@@ -1543,7 +1546,8 @@
    "source": [
     "# des_len and beds\n",
     "plt.figure(figsize=(12,8))\n",
-    "sns.boxplot(x='beds',y='des_len',data=df)"
+    "sns.boxplot(x='beds',y='des_len',data=df)\n",
+    "plt.savefig('heat_plot.png')"
    ]
   },
   {
