--- a/data_clean/eda_and_data_clean.ipynb
+++ b/data_clean/eda_and_data_clean.ipynb
@@ -328,7 +328,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a4d9731c10>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1c948c89d00>"
       ]
      },
      "execution_count": 8,
@@ -397,7 +397,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a4d8d8efd0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1c97dfdcf40>"
       ]
      },
      "execution_count": 11,
@@ -456,7 +456,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a4da183fa0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1c97ef506a0>"
       ]
      },
      "execution_count": 13,
@@ -490,7 +490,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a4da7f7ca0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1c97ef50a30>"
       ]
      },
      "execution_count": 14,
@@ -1082,42 +1082,42 @@
        " ฉะเชิงเทรา          21\n",
        " นครศรีธรรมราช       19\n",
        " ประจวบคีรีขันธ์     17\n",
-       " นครราชสีมา          13\n",
        " เชียงราย            13\n",
+       " นครราชสีมา          13\n",
        " ราชบุรี             12\n",
        " สุราษฎร์ธานี        12\n",
-       " ปราจีนบุรี           9\n",
        " กาญจนบุรี            9\n",
-       " จันทบุรี             8\n",
+       " ปราจีนบุรี           9\n",
        " เพชรบุรี             8\n",
+       " จันทบุรี             8\n",
        " ลำปาง                7\n",
        " สระบุรี              7\n",
        " สมุทรสงคราม          6\n",
        " ลำพูน                5\n",
        " นครนายก              5\n",
-       " เพชรบูรณ์            4\n",
        " สงขลา                4\n",
        " อุบลราชธานี          4\n",
-       " กระบี่               3\n",
-       " สุรินทร์             3\n",
-       " สุพรรณบุรี           3\n",
-       " พะเยา                3\n",
+       " เพชรบูรณ์            4\n",
        " ชัยภูมิ              3\n",
        " ขอนแก่น              3\n",
+       " สุรินทร์             3\n",
+       " สุพรรณบุรี           3\n",
+       " กระบี่               3\n",
+       " พะเยา                3\n",
        " พิษณุโลก             3\n",
-       " บึงกาฬ               2\n",
-       " ตราด                 2\n",
-       " อุตรดิตถ์            2\n",
-       " ชุมพร                2\n",
-       " น่าน                 2\n",
        " ศรีสะเกษ             2\n",
        " นครสวรรค์            2\n",
-       " สุโขทัย              1\n",
-       " ลพบุรี               1\n",
-       " กาฬสินธุ์            1\n",
-       " สิงห์บุรี            1\n",
+       " ชุมพร                2\n",
+       " บึงกาฬ               2\n",
+       " อุตรดิตถ์            2\n",
+       " ตราด                 2\n",
+       " น่าน                 2\n",
        " บุรีรัมย์            1\n",
+       " กาฬสินธุ์            1\n",
+       " สุโขทัย              1\n",
+       " สิงห์บุรี            1\n",
        " ร้อยเอ็ด             1\n",
+       " ลพบุรี               1\n",
        "Name: prov, dtype: int64"
       ]
      },
@@ -1138,7 +1138,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a4daa57a00>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1c97f857a30>"
       ]
      },
      "execution_count": 31,
@@ -1183,38 +1183,38 @@
     {
      "data": {
       "text/plain": [
-       "[' ปราจีนบุรี',\n",
-       " ' กาญจนบุรี',\n",
-       " ' จันทบุรี',\n",
+       "[' กาญจนบุรี',\n",
+       " ' ปราจีนบุรี',\n",
        " ' เพชรบุรี',\n",
+       " ' จันทบุรี',\n",
        " ' ลำปาง',\n",
        " ' สระบุรี',\n",
        " ' สมุทรสงคราม',\n",
        " ' ลำพูน',\n",
        " ' นครนายก',\n",
-       " ' เพชรบูรณ์',\n",
        " ' สงขลา',\n",
        " ' อุบลราชธานี',\n",
-       " ' กระบี่',\n",
-       " ' สุรินทร์',\n",
-       " ' สุพรรณบุรี',\n",
-       " ' พะเยา',\n",
+       " ' เพชรบูรณ์',\n",
        " ' ชัยภูมิ',\n",
        " ' ขอนแก่น',\n",
+       " ' สุรินทร์',\n",
+       " ' สุพรรณบุรี',\n",
+       " ' กระบี่',\n",
+       " ' พะเยา',\n",
        " ' พิษณุโลก',\n",
-       " ' บึงกาฬ',\n",
-       " ' ตราด',\n",
-       " ' อุตรดิตถ์',\n",
-       " ' ชุมพร',\n",
-       " ' น่าน',\n",
        " ' ศรีสะเกษ',\n",
        " ' นครสวรรค์',\n",
-       " ' สุโขทัย',\n",
-       " ' ลพบุรี',\n",
-       " ' กาฬสินธุ์',\n",
-       " ' สิงห์บุรี',\n",
+       " ' ชุมพร',\n",
+       " ' บึงกาฬ',\n",
+       " ' อุตรดิตถ์',\n",
+       " ' ตราด',\n",
+       " ' น่าน',\n",
        " ' บุรีรัมย์',\n",
-       " ' ร้อยเอ็ด']"
+       " ' กาฬสินธุ์',\n",
+       " ' สุโขทัย',\n",
+       " ' สิงห์บุรี',\n",
+       " ' ร้อยเอ็ด',\n",
+       " ' ลพบุรี']"
       ]
      },
      "execution_count": 33,
@@ -1425,7 +1425,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x1a4dad10c10>"
+       "<seaborn.axisgrid.FacetGrid at 0x1c97f8a87c0>"
       ]
      },
      "execution_count": 37,
@@ -1459,7 +1459,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x1a4dad49d60>"
+       "<seaborn.axisgrid.FacetGrid at 0x1c97f4f63d0>"
       ]
      },
      "execution_count": 38,
@@ -1518,7 +1518,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a4d9ea16d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1c9105806a0>"
       ]
      },
      "execution_count": 40,
@@ -1971,10 +1971,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 46,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# creating dummies for prov\n",
     "prov_dummies = pd.get_dummies(data=df['prov'],drop_first=True)\n",
@@ -1982,10 +1980,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 47,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# creating dummies for dis\n",
     "sub_dummies = pd.get_dummies(data=df['dis'],drop_first=True)\n",
@@ -1994,21 +1990,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Index(['areas', 'beds', 'baths', 'descriptions', 'listing_date', 'prices',\n",
-       "       'status', 'titles', 'sub', 'title_len',\n",
-       "       ...\n",
-       "       ' แก่งคอย', ' แปลงยาว', ' แม่จัน', ' แม่ทะ', ' แม่ริม', ' แม่แตง',\n",
-       "       ' โคกสำโรง', ' โพธาราม', ' ไชยา', ' ไทรน้อย'],\n",
-       "      dtype='object', length=259)"
+       "       'status', 'titles', 'sub', 'dis', 'prov', 'title_len', 'des_len',\n",
+       "       'school', 'airport', 'city', 'association', 'university', 'view'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2019,17 +2013,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sub dis has alot of value duplicated from dis, so I will drop it \n",
-    "df.drop('sub', axis=1, inplace = True)"
+    "# drop all addresses\n",
+    "df.drop('sub', axis=1, inplace = True)\n",
+    "df.drop('dis', axis=1, inplace = True)\n",
+    "df.drop('prov', axis=1, inplace = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2039,13 +2035,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "# creating dummies for status\n",
     "status_dummies = pd.get_dummies(data=df['status'],drop_first=True)\n",
     "df = pd.concat([df.drop('status',axis=1),status_dummies],axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# there are only a 2 offers with unversity so drop it\n",
+    "df.drop('university', axis=1, inplace = True)"
    ]
   },
   {
@@ -2084,16 +2090,8 @@
        "      <th>school</th>\n",
        "      <th>airport</th>\n",
        "      <th>city</th>\n",
-       "      <th>...</th>\n",
-       "      <th>แปลงยาว</th>\n",
-       "      <th>แม่จัน</th>\n",
-       "      <th>แม่ทะ</th>\n",
-       "      <th>แม่ริม</th>\n",
-       "      <th>แม่แตง</th>\n",
-       "      <th>โคกสำโรง</th>\n",
-       "      <th>โพธาราม</th>\n",
-       "      <th>ไชยา</th>\n",
-       "      <th>ไทรน้อย</th>\n",
+       "      <th>association</th>\n",
+       "      <th>view</th>\n",
        "      <th>ใหม่</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -2110,14 +2108,6 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -2131,14 +2121,6 @@
        "      <td>23900000</td>\n",
        "      <td>86</td>\n",
        "      <td>666</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -2158,21 +2140,12 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3 rows × 256 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -2181,17 +2154,10 @@
        "1   82.0   3.0    4.0   2021-10-18  23900000         86      666       0   \n",
        "2   40.0   3.0    2.0   2021-10-18   3990000         85     1594       1   \n",
        "\n",
-       "   airport  city  ...   แปลงยาว   แม่จัน   แม่ทะ   แม่ริม   แม่แตง   โคกสำโรง  \\\n",
-       "0        1     1  ...         0        0       0        0        0          0   \n",
-       "1        0     0  ...         0        0       0        0        0          0   \n",
-       "2        0     0  ...         0        0       0        0        0          0   \n",
-       "\n",
-       "    โพธาราม   ไชยา   ไทรน้อย  ใหม่  \n",
-       "0         0      0         0     1  \n",
-       "1         0      0         0     0  \n",
-       "2         0      0         0     0  \n",
-       "\n",
-       "[3 rows x 256 columns]"
+       "   airport  city  association  view  ใหม่  \n",
+       "0        1     1            0     0     1  \n",
+       "1        0     0            0     0     0  \n",
+       "2        0     0            1     0     0  "
       ]
      },
      "execution_count": 52,
@@ -2212,61 +2178,8 @@
      "data": {
       "text/plain": [
        "array(['areas', 'beds', 'baths', 'listing_date', 'prices', 'title_len',\n",
-       "       'des_len', 'school', 'airport', 'city', 'association',\n",
-       "       'university', 'view', ' กรุงเทพมหานคร', ' กาญจนบุรี', ' กาฬสินธุ์',\n",
-       "       ' ขอนแก่น', ' จันทบุรี', ' ฉะเชิงเทรา', ' ชลบุรี', ' ชัยภูมิ',\n",
-       "       ' ชุมพร', ' ตราด', ' นครนายก', ' นครปฐม', ' นครราชสีมา',\n",
-       "       ' นครศรีธรรมราช', ' นครสวรรค์', ' นนทบุรี', ' น่าน', ' บึงกาฬ',\n",
-       "       ' บุรีรัมย์', ' ปทุมธานี', ' ประจวบคีรีขันธ์', ' ปราจีนบุรี',\n",
-       "       ' พระนครศรีอยุธยา', ' พะเยา', ' พิษณุโลก', ' ภูเก็ต', ' ระยอง',\n",
-       "       ' ราชบุรี', ' ร้อยเอ็ด', ' ลพบุรี', ' ลำปาง', ' ลำพูน',\n",
-       "       ' ศรีสะเกษ', ' สงขลา', ' สมุทรปราการ', ' สมุทรสงคราม',\n",
-       "       ' สมุทรสาคร', ' สระบุรี', ' สระแก้ว', ' สิงห์บุรี', ' สุพรรณบุรี',\n",
-       "       ' สุราษฎร์ธานี', ' สุรินทร์', ' สุโขทัย', ' อุตรดิตถ์',\n",
-       "       ' อุบลราชธานี', ' เชียงราย', ' เชียงใหม่', ' เพชรบุรี',\n",
-       "       ' เพชรบูรณ์', ' กะทู้', ' กำแพงแสน', ' คลองสามวา', ' คลองหลวง',\n",
-       "       ' คลองเตย', ' คันนายาว', ' ค่ายบางระจัน', ' จตุจักร', ' จอมทอง',\n",
-       "       ' จอมบึง', ' ชะอำ', ' ชุมแพ', ' ดอนตูม', ' ดอนเมือง', ' ดอยสะเก็ด',\n",
-       "       ' ดินแดง', ' ตลิ่งชัน', ' ตาคลี', ' ถลาง', ' ทวีวัฒนา', ' ทุ่งครุ',\n",
-       "       ' ทุ่งสง', ' ท่าปลา', ' ท่ามะกา', ' ท่าม่วง', ' ท่ายาง',\n",
-       "       ' ท่าใหม่', ' ธวัชบุรี', ' ธัญบุรี', ' นครชัยศรี', ' นิคมพัฒนา',\n",
-       "       ' บางกรวย', ' บางกล่ำ', ' บางกะปิ', ' บางขุนเทียน', ' บางคนที',\n",
-       "       ' บางคอแหลม', ' บางซื่อ', ' บางนา', ' บางบอน', ' บางบัวทอง',\n",
-       "       ' บางบ่อ', ' บางปะกง', ' บางปะหัน', ' บางปะอิน', ' บางพลัด',\n",
-       "       ' บางพลี', ' บางละมุง', ' บางเขน', ' บางเลน', ' บางเสาธง',\n",
-       "       ' บางแค', ' บางแพ', ' บางใหญ่', ' บางไทร', ' บึงกุ่ม', ' บ่อไร่',\n",
-       "       ' บ้านค่าย', ' บ้านฉาง', ' บ้านธิ', ' บ้านบึง', ' บ้านเขว้า',\n",
-       "       ' บ้านโป่ง', ' บ้านโพธิ์', ' ประจันตคาม', ' ประเวศ', ' ประโคนชัย',\n",
-       "       ' ปราณบุรี', ' ปราสาท', ' ปลวกแดง', ' ปะทิว', ' ปากช่อง',\n",
-       "       ' ปากท่อ', ' ปากเกร็ด', ' ฝาง', ' พญาไท', ' พนมสารคาม',\n",
-       "       ' พรหมคีรี', ' พระนครศรีอยุธยา', ' พระประแดง', ' พระพุทธบาท',\n",
-       "       ' พระสมุทรเจดีย์', ' พระโขนง', ' พร้าว', ' พานทอง',\n",
-       "       ' พิบูลมังสาหาร', ' พุทธมณฑล', ' ภาษีเจริญ', ' ภูกามยาว',\n",
-       "       ' ภูเพียง', ' มวกเหล็ก', ' มัญจาคีรี', ' มีนบุรี', ' ยางตลาด',\n",
-       "       ' ราษฎร์บูรณะ', ' ราษีไศล', ' ลาดกระบัง', ' ลาดบัวหลวง',\n",
-       "       ' ลาดพร้าว', ' ลาดหลุมแก้ว', ' ลำลูกกา', ' วังทอง', ' วังทองหลาง',\n",
-       "       ' วังน้อย', ' วัฒนา', ' วารินชำราบ', ' ศรีมหาโพธิ', ' ศรีราชา',\n",
-       "       ' สวนหลวง', ' สองพี่น้อง', ' สอยดาว', ' สะพานสูง', ' สัตหีบ',\n",
-       "       ' สันกำแพง', ' สันทราย', ' สันป่าตอง', ' สาทร', ' สามพราน',\n",
-       "       ' สามร้อยยอด', ' สามโคก', ' สายไหม', ' สารภี', ' สิชล', ' สูงเนิน',\n",
-       "       ' หนองจอก', ' หนองเสือ', ' หนองแขม', ' หลักสี่', ' หล่มเก่า',\n",
-       "       ' หัวหิน', ' หางดง', ' หาดใหญ่', ' ห้วยขวาง', ' ห้างฉัตร',\n",
-       "       ' องครักษ์', ' อรัญประเทศ', ' อัมพวา', ' อุทัย', ' อุทุมพรพิสัย',\n",
-       "       ' ฮอด', ' เกาะสมุย', ' เขาฉกรรจ์', ' เขาสวนกวาง', ' เชียงกลาง',\n",
-       "       ' เชียงของ', ' เทิง', ' เมืองกระบี่', ' เมืองกาญจนบุรี',\n",
-       "       ' เมืองจันทบุรี', ' เมืองฉะเชิงเทรา', ' เมืองชลบุรี',\n",
-       "       ' เมืองชัยภูมิ', ' เมืองตราด', ' เมืองนครนายก', ' เมืองนครปฐม',\n",
-       "       ' เมืองนครศรีธรรมราช', ' เมืองนครสวรรค์', ' เมืองนนทบุรี',\n",
-       "       ' เมืองบึงกาฬ', ' เมืองปทุมธานี', ' เมืองประจวบคีรีขันธ์',\n",
-       "       ' เมืองปราจีนบุรี', ' เมืองพะเยา', ' เมืองพิษณุโลก',\n",
-       "       ' เมืองภูเก็ต', ' เมืองระยอง', ' เมืองลำปาง', ' เมืองลำพูน',\n",
-       "       ' เมืองสงขลา', ' เมืองสมุทรปราการ', ' เมืองสมุทรสงคราม',\n",
-       "       ' เมืองสมุทรสาคร', ' เมืองสระบุรี', ' เมืองสุพรรณบุรี',\n",
-       "       ' เมืองสุราษฎร์ธานี', ' เมืองสุโขทัย', ' เมืองอุบลราชธานี',\n",
-       "       ' เมืองเชียงราย', ' เมืองเชียงใหม่', ' เมืองเพชรบุรี',\n",
-       "       ' เมืองเพชรบูรณ์', ' เสนา', ' แก่งคอย', ' แปลงยาว', ' แม่จัน',\n",
-       "       ' แม่ทะ', ' แม่ริม', ' แม่แตง', ' โคกสำโรง', ' โพธาราม', ' ไชยา',\n",
-       "       ' ไทรน้อย', 'ใหม่'], dtype=object)"
+       "       'des_len', 'school', 'airport', 'city', 'association', 'view',\n",
+       "       'ใหม่'], dtype=object)"
       ]
      },
      "execution_count": 53,
